fixed right spacing main nav

--- a/src/sass/elements/_nav_bar_draw-1.sass
+++ b/src/sass/elements/_nav_bar_draw-1.sass
@@ -29,14 +29,14 @@
 ///     +nav_bar_draw-1(36px, 2px, 7px 11px)
 
 
-=nav_bar_draw-1($item_padding, $border_w, $border_padding)
+=nav_bar_draw-1($item_margin, $border_w, $border_padding_top, $border_padding_sides)
   display: flex
   .menu-item
-    padding-left: $item_padding
+    margin-left: $item_margin
     a
-      padding: $border_padding
+      padding: $border_padding_top $border_padding_sides
     > a:hover, > a.selected
       border-top: $border_w solid white
-      
-
+    &:last-child
+      margin-right: -$border_padding_sides
 
